fix overflow on safari

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ html {
     font-family: 'Caveat', cursive;
     color: #342A21;
     position: relative;
+    overflow: hidden;
 }
 
 body {
